# evdev

./: .gitignore  CHANGELOG.md  README.md  TODO.md  cabal.project  evdev.cabal  hie.yaml
.github/workflows/: haskell.yml  workflow.yaml
evdev/: CHANGELOG.md  LICENSE  README.md  evdev.cabal  hie.yaml
evdev-examples/: CHANGELOG.md  evdev-examples.cabal  hie.yaml
evdev-examples/evtest/: Main.hs
evdev-examples/replay/: Main.hs
evdev-examples/src/: Evtest.hs
evdev-examples/trigger/: Main.hs
evdev-examples/uinput/: Main.hs
evdev-streamly/: CHANGELOG.md  README.md  evdev-streamly.cabal
evdev-streamly/src/Evdev/: Stream.hs
evdev/src/: Evdev.hs  Util.hs
evdev/src-c/: evdev-hs.c
evdev/src/Evdev/: Codes.chs  LowLevel.chs  Stream.hs  Uinput.hs
evdev/test/: Test.hs
src/: Evdev.chs  Evdev.hs
src/Evdev/: Codes.chs  Codes.hs  LowLevel.chs  Stream.hs
