cabal-version:       2.4
name:                evdev-examples
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              George Thomas
maintainer:          George Thomas

executable evtest
    main-is: Main.hs
    hs-source-dirs: evtest
    build-depends:
        base,
        bytestring,
        evdev,
        evdev-streamly,
        pretty-simple,
        streamly,
    ghc-options:
        -threaded
        -Wall
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings

executable uinput
    main-is: Main.hs
    hs-source-dirs: uinput
    build-depends:
        base,
        bytestring,
        evdev,
    ghc-options:
        -threaded
        -Wall
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
