cabal-version:       2.4
name:                evdev-examples
version:             0.1.0.0
license:             BSD-3-Clause
author:              George Thomas
maintainer:          George Thomas

executable evtest
    main-is: Main.hs
    hs-source-dirs: evtest
    build-depends:
        base,
        bytestring,
        evdev,
        evdev-streamly,
        filepath,
        pretty-simple,
        streamly,
    ghc-options:
        -threaded
        -Wall
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        LambdaCase
        OverloadedStrings

executable uinput-echo
    main-is: Main.hs
    hs-source-dirs: uinput
    build-depends:
        base,
        bytestring,
        evdev,
    ghc-options:
        -threaded
        -Wall
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        LambdaCase
        OverloadedStrings

executable evdev-trigger
    main-is: Main.hs
    hs-source-dirs: trigger
    build-depends:
        base,
        evdev,
        evdev-streamly,
        process,
        streamly,
    ghc-options:
        -threaded
        -Wall
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        BlockArguments
        LambdaCase
        ViewPatterns

executable evdev-replay
    main-is: Main.hs
    hs-source-dirs: replay
    build-depends:
        base,
        evdev,
        evdev-streamly,
        filepath,
        mtl,
        streamly,
        time,
    ghc-options:
        -threaded
        -Wall
    default-language: GHC2021
    default-extensions:
        BlockArguments
        LambdaCase
        OverloadedRecordDot
        OverloadedStrings
        ViewPatterns
