cabal-version:       3.0
name:                evdev
version:             1.3.0.0
author:              George Thomas
maintainer:          George Thomas
description:         Provides access to the Linux event device interface, with an optional high-level Streamly-based API.
synopsis:            Bindings to libevdev
homepage:            https://github.com/georgefst/evdev
license:             BSD-3-Clause
license-file:        LICENSE
category:            System
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: git://github.com/georgefst/evdev.git

library
    exposed-modules:
        Evdev
        Evdev.Codes
        Evdev.Stream
    other-modules:
        Evdev.LowLevel
    hs-source-dirs: src
    c-sources:
        src-c/evdev-hs.c
    pkgconfig-depends:
        libevdev
    ghc-options:
        -Wall
    build-depends:
        base                 >= 4.11 && < 5,
        bytestring           ^>= 0.10,
        containers           ^>= 0.6.2,
        extra                ^>= {1.6.18, 1.7},
        monad-loops          ^>= 0.4.3,
        paths                ^>= 0.2,
        posix-paths          ^>= 0.2.1,
        rawfilepath          ^>= 0.2.4,
        safe                 ^>= 0.3.18,
        streamly             ^>= {0.6.1, 0.7},
        streamly-fsnotify    ^>= 1.0,
        time                 ^>= {1.9.3, 1.10},
        unix                 ^>= 2.7.2,
    build-tool-depends:
        c2hs:c2hs
    default-language: Haskell2010
    default-extensions:
        FlexibleContexts
        GeneralizedNewtypeDeriving
        LambdaCase
        NumericUnderscores
        OverloadedLists
        OverloadedStrings
        PatternSynonyms
        TupleSections
        ViewPatterns
